--- a/src/components/KofunApp/KofunApp.module.css
+++ b/src/components/KofunApp/KofunApp.module.css
@@ -1,7 +1,1 @@
-.container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
-  /* width: min(100%, 24rem); */
-}
+
